--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
 	 font-family: 'Arial';
 	 font-size: 15px;
 	overflow-x:hidden;
-	
+	z-index:-1
 }
 
 .nav-item{
@@ -135,4 +135,22 @@ color:white;
 #imgab
 {
 	border-radius:5px;
+}
+
+
+@media only screen and (max-width: 479px) {
+
+.navbar-toggler-icon{
+
+ border:2px solid  white;
+
+border-radius:0.5;
+  
+}
+.navbar{
+	width:100%;
+}
+.footer{
+	width:100%;
+}
 }
